# zintrin

./: CMakeLists.txt  README.md  zintrin.sln  zintrin.vcxproj  zintrin.vcxproj.filters
src/: zintrin.c  zintrin.h
